Xây dựng chức năng quản lý chi tiêu

--- a/QuanLyCTCN/appsettings.json
+++ b/QuanLyCTCN/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DESKTOP-BKB92C0\\SQLEXPRESS01;Database=QLChiTieuCaNhan;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-BKB92C0\\SQLEXPRESS01;Database=QLChiTieuCaNhan;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
